--- a/new.css
+++ b/new.css
@@ -1,6 +1,11 @@
 
 #add-new-to-do-button{
     font-size: 20px;
-    text-align: center;
+    text-align:center;
     display: block;
+    border-radius:10px; 
+    background-color: purple;
+    border-style: dotted
+    body {
+    color:gray;
 }
